@@ -179,4 +179,13 @@ object SnakemakeAPI {
             SMK_VARS_ATTEMPT
         )
     )
+
+    /**
+     * Set of rule\checkpoint sections that does not expect keyword arguments
+     */
+    val SECTIONS_WHERE_KEYWORD_ARGS_PROHIBITED = setOf(
+            SECTION_BENCHMARK, SECTION_VERSION, SECTION_MESSAGE, SECTION_SHELL, SECTION_THREADS, SECTION_SINGULARITY,
+            SECTION_PRIORITY, SECTION_GROUP, SECTION_SHADOW, SECTION_CONDA, SECTION_SCRIPT, SECTION_WRAPPER,
+            SECTION_CWL, SECTION_NOTEBOOK, SECTION_CACHE, SECTION_CONTAINER
+    )
 }
