@@ -1,0 +1,6 @@
+<html>
+<body>
+Following sections do not expect keyword arguments: benchmark, cache, conda, container, cwl, group, message, notebook,
+priority, script, shadow, shell, singularity, threads, version, wrapper, workdir, snakefile, configfile.
+</body>
+</html>
